Aportación de Ricardo Díaz González

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-      Linea aportada por Ricardo Díaz González.
+Rafael Retamal Donoso 45558162s
+Ricardo Díaz González 76268082J
 </body>
 </html>
